[metadata]
name = open-elevator-PREDLY
version = 0.0.1
author = Marvin Gabler
author_email = m.gabler@predly.com
description = Open Elevator 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/predly/open-elevator
project_urls =
    Bug Tracker = https://github.com/predly/open-elevator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
